--- a/signup.html
+++ b/signup.html
@@ -3,40 +3,117 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign Up</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Google reCAPTCHA -->
+  <title>Firebase Auth with Email Verification</title>
+  <!-- FontAwesome for icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" >
+  <link rel="stylesheet" href="stylesforsignup.css" />
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <style>
+    .password-wrapper {
+      position: relative;
+    }
+    .password-wrapper input {
+      width: 100%;
+      padding-right: 2.5em; /* space for the icon */
+    }
+    .password-wrapper .toggle-password {
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      cursor: pointer;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
+  <!-- Navigation -->
+  <nav>
+    <div class="logo">
+      <a href="index.html">
+        <img src="movie review logo.png" alt="Logo" />
+        Rotten Bananas
+      </a>
+    </div>
+    <div class="search-bar">
+      <input type="text" id="nav-search-input" placeholder="Search movies..." />
+      <button id="nav-search-btn">Search</button>
+    </div>
+    <ul>
+      <li><a href="#action">Action</a></li>
+      <li><a href="#comedy">Comedy</a></li>
+      <li><a href="#drama">Drama</a></li>
+      <li><a href="#scifi">Sci-Fi</a></li>
+      <li><a href="#horror">Horror</a></li>
+      <li><a href="#fantasy">Fantasy</a></li>
+      <li class="user-menu" id="userMenu">
+        <span class="user-btn" id="userBtn">Log In / Sign Up <i class="fas fa-caret-down"></i></span>
+        <div class="dropdown" id="userDropdown">
+          <a href="login.html">Log In</a>
+          <a href="signup.html">Sign Up</a>
+        </div>
+      </li>
+      <li class="language-selector">
+        <i class="fas fa-globe"></i>
+      </li>
+    </ul>
+  </nav>
+  
   <div class="container">
-    <h2>Sign Up</h2>
-    <form id="signupForm">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
+    <!-- Sign Up Form -->
+    <div class="form-container">
+      <h2>Sign Up</h2>
+      <form id="signUpForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" required />
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+        <label for="email">Email:</label>
+        <input type="email" id="signupEmail" required />
 
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
+        <label for="password">Password:</label>
+        <div class="password-wrapper">
+          <input type="password" id="signupPassword" required />
+          <i class="fa-solid fa-eye toggle-password"></i>
+        </div>
 
-      <label for="confirmPassword">Confirm Password:</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" required />
+        <label for="confirmPassword">Confirm Password:</label>
+        <div class="password-wrapper">
+          <input type="password" id="confirmPassword" required />
+          <i class="fa-solid fa-eye toggle-password"></i>
+        </div>
 
-      <!-- Google reCAPTCHA widget -->
-      <div class="g-recaptcha" data-sitekey="6Lf6htsqAAAAAGF8eKUCP336Fjypli1pGVu36s6Q"></div>
+        <div class="g-recaptcha" data-sitekey="6Lf6htsqAAAAAGF8eKUCP336Fjypli1pGVu36s6Q"></div>
 
-      <button type="submit">Sign Up</button>
-    </form>
-    <p>Already have an account? <a href="login.html">Log In</a></p>
+        <button type="submit">Sign Up</button>
+      </form>
+      <p>Already have an account? <a href="login.html">Log In</a></p>
+      <hr />
+      <!-- Sign Up with Google button -->
+      <button id="googleSignUp" class="google">Sign Up with Google</button>
+    </div>
   </div>
 
   <script type="module">
+    // Import Firebase modules
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendEmailVerification } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
+    import {
+      getAuth,
+      createUserWithEmailAndPassword,
+      sendEmailVerification,
+      signInWithPopup,
+      GoogleAuthProvider
+    } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js";
+    import {
+      getFirestore,
+      setDoc,
+      doc
+    } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
 
-    // Firebase configuration (thay thế YOUR_... bằng giá trị thật)
+    // Firebase configuration – replace with your project's settings
     const firebaseConfig = {
       apiKey: "AIzaSyADB_JR1kJUslyg1VwhQn7SC05lsO0Lzco",
       authDomain: "rottenbananas-signup.firebaseapp.com",
@@ -45,92 +122,86 @@
       messagingSenderId: "841550936785",
       appId: "1:841550936785:web:694ffd5588f8776e6be3f0"
     };
+
+    // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // Hàm kiểm tra password: tối thiểu 6 ký tự, chứa 1 chữ hoa, 1 chữ thường và 1 ký tự đặc biệt
-    function isPasswordValid(password) {
-      const regex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\W).{6,}$/;
-      return regex.test(password);
-    }
-
-    // Giới hạn số tài khoản trên 1 thiết bị (sử dụng localStorage)
-    function canCreateAccount() {
-      let count = localStorage.getItem("accountCount") || 0;
-      return parseInt(count) < 5;
-    }
-    function incrementAccountCount() {
-      let count = localStorage.getItem("accountCount") || 0;
-      count = parseInt(count) + 1;
-      localStorage.setItem("accountCount", count);
-    }
-
-    // Hàm tạo OTP 6 chữ số
-    function generateOTP() {
-      return Math.floor(100000 + Math.random() * 900000).toString();
-    }
-
-    // Giả lập gửi OTP qua Mailgun (thay thế bằng API thực tế)
-    function sendOTP(email, otp) {
-      console.log("Sending OTP", otp, "to", email);
-      alert("An OTP has been sent to your email: " + email);
-      // TODO: Tích hợp Mailgun API
-    }
-
-    document.getElementById("signupForm").addEventListener("submit", async (e) => {
+    // Handle email/password sign-up
+    document.getElementById("signUpForm").addEventListener("submit", (e) => {
       e.preventDefault();
-
-      // Kiểm tra reCAPTCHA (thường phải gửi token lên server để xác minh)
-      const recaptchaResponse = grecaptcha.getResponse();
-      if (!recaptchaResponse) {
-        alert("Please complete the reCAPTCHA");
-        return;
-      }
-
-      const username = document.getElementById("username").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const password = document.getElementById("password").value;
+      const username = document.getElementById("username").value;
+      const email = document.getElementById("signupEmail").value;
+      const password = document.getElementById("signupPassword").value;
       const confirmPassword = document.getElementById("confirmPassword").value;
-
+      
       if (password !== confirmPassword) {
         alert("Passwords do not match!");
         return;
       }
-      if (!isPasswordValid(password)) {
-        alert("Password must be at least 6 characters long and include 1 special character, 1 uppercase letter, and 1 lowercase letter.");
-        return;
-      }
-      if (!canCreateAccount()) {
-        alert("Account creation limit reached on this device.");
-        return;
-      }
 
-      try {
-        // Tạo tài khoản trên Firebase Auth
-        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
-        // Lưu username vào Firestore để người dùng có thể dùng username khi đăng nhập
-        await setDoc(doc(db, "users", userCredential.user.uid), {
-          username: username,
-          email: email
+      createUserWithEmailAndPassword(auth, email, password)
+        .then(async (userCredential) => {
+          const user = userCredential.user;
+          // Save username, email, and creation time to Firestore
+          await setDoc(doc(db, "users", user.uid), {
+            username: username,
+            email: email,
+            createdAt: new Date()
+          });
+
+          // Send verification email
+          sendEmailVerification(user)
+            .then(() => {
+              window.location.href = "emailVerification.html";
+            })
+            .catch((error) => {
+              alert("Error sending verification email: " + error.message);
+              console.error("Error sending email verification:", error);
+            });
+        })
+        .catch((error) => {
+          alert("Error: " + error.message);
+          console.error("Error signing up:", error);
         });
-        // Cập nhật số tài khoản đã tạo trên thiết bị
-        incrementAccountCount();
+    });
 
-        // Tạo OTP và lưu tạm (trên production, lưu trên server)
-        const otp = generateOTP();
-        localStorage.setItem("signupOTP", otp);
-        localStorage.setItem("signupEmail", email);
-
-        // Gửi OTP qua Mailgun
-        sendOTP(email, otp);
-
-        // Chuyển hướng đến trang Verify để nhập OTP
-        window.location.href = "verify.html";
+    // Handle sign-up with Google
+    document.getElementById("googleSignUp").addEventListener("click", async () => {
+      const provider = new GoogleAuthProvider();
+      try {
+        const result = await signInWithPopup(auth, provider);
+        const user = result.user;
+        // Use displayName as username if available
+        await setDoc(doc(db, "users", user.uid), {
+          username: user.displayName || "No Name",
+          email: user.email,
+          createdAt: new Date()
+        }, { merge: true });
+        window.location.href = "index.html";
       } catch (error) {
-        console.error("Error during sign up:", error);
-        alert(error.message);
+        alert("Error with Google Sign Up: " + error.message);
+        console.error("Google sign up error:", error);
       }
+    });
+
+    // Toggle password visibility for both password fields
+    const togglePasswordIcons = document.querySelectorAll('.password-wrapper .toggle-password');
+    togglePasswordIcons.forEach(icon => {
+      icon.addEventListener('click', function() {
+        // Assuming the input is the previous sibling of the icon
+        const passwordInput = this.previousElementSibling;
+        if (passwordInput.type === "password") {
+          passwordInput.type = "text";
+          this.classList.remove("fa-eye");
+          this.classList.add("fa-eye-slash");
+        } else {
+          passwordInput.type = "password";
+          this.classList.remove("fa-eye-slash");
+          this.classList.add("fa-eye");
+        }
+      });
     });
   </script>
 </body>
