--- a/emailVerification.html
+++ b/emailVerification.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script defer
+  src="https://unpkg.com/verifalia-widget@1.13.0/dist/verifalia-widget.js"
+  data-verifalia-appkey="c99f98df461b42d7a11c33bf500f0fb3"
+  integrity="sha512-lSDPMmyZ2UdFJe668Pqz6kpbWtycj+edgzRTBdbAhXCTtWY+Shz0Qhgpo4R5wzQwjTUqm5h/4DV0ALATSob5ow=="
+  crossorigin="anonymous"></script>
   <title>Email Verification Sent</title>
   <style>
     body {
