--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,11 @@
   <script src="https://www.gstatic.com/firebasejs/11.3.1/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js"></script>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script defer
+  src="https://unpkg.com/verifalia-widget@1.13.0/dist/verifalia-widget.js"
+  data-verifalia-appkey="c99f98df461b42d7a11c33bf500f0fb3"
+  integrity="sha512-lSDPMmyZ2UdFJe668Pqz6kpbWtycj+edgzRTBdbAhXCTtWY+Shz0Qhgpo4R5wzQwjTUqm5h/4DV0ALATSob5ow=="
+  crossorigin="anonymous"></script>
   <style>
     .password-wrapper {
       position: relative;
